--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,38 @@
 .root *{
     transition: background-color 0.5s ease !important;
 }
+body::-webkit-scrollbar{
+    width: 0.4rem;
+}
+body::-webkit-scrollbar-track{
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.532);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.454);
+}
+body::-webkit-scrollbar-thumb{
+    background-color: rgba(0,0,0,.16);
+    outline: 1px solid slategrey;
+}
+.dark-mode-body::-webkit-scrollbar{
+    background-color: #121212;
+}
+.dark-mode-body::-webkit-scrollbar-track{
+    box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.454);
+    -webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.454);
+}
+.dark-mode-body::-webkit-scrollbar-thumb{
+    background-color: rgba(255, 255, 255, 0.16);
+}
+.root *::-webkit-scrollbar{
+    width: 0.4rem;
+}
+.root *::-webkit-scrollbar-track{
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.532);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.454);
+}
+.root *::-webkit-scrollbar-thumb{
+    background-color: rgba(0,0,0,.16);
+    outline: 1px solid slategrey;
+}
 .darkMode-bg {
     background-color: #121212;
 }
