Add dark mode & responsiveness to profile box

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -43,3 +43,10 @@ body::-webkit-scrollbar-thumb{
 .lightMode-bg {
     background-color: #efefef;
 }
+/* Responsiveness */
+@media screen and (max-width: 380px) {
+    .stackContainer{
+        padding: 0px !important;
+        width: 100% !important;
+    }
+}
