Add Dynamically changing Media tab

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -43,6 +43,9 @@ body::-webkit-scrollbar-thumb{
 .lightMode-bg {
     background-color: #efefef;
 }
+.mediaImage{
+    cursor: pointer;
+}
 /* Responsiveness */
 @media screen and (max-width: 380px) {
     .stackContainer{
